refactor: wrapping int to PositiveNumber